# enscrive-cli

./: .gitignore  Cargo.toml  LICENSE  OPERATORS.md  README.md  VISION.md  build.rs  v1-surface-contract.toml
.claude/team-state/: dirty-files.jsonl
.github/: CODEOWNERS
.github/scripts/: bump-dev-toml-test.py  bump-dev-toml.py  pr-review-verdict-test.sh  pr-review.sh
.github/workflows/: ci.yml  manifest.yml  pr-review.yml  release-orchestrator.yml  release.yml  tag.yml
docs/: RELEASE-NOTES-TEMPLATE.md  RELEASING.md  STATE-OF-CLI.md  cli-findings.md  cli-flows.md  cli-parity-table.md
installer/: DESIGN-DECISIONS.md  install.sh  test_install.sh
installer/manifests/dev/: latest.json
scripts/: bootstrap_current_truth_fixture.py  gen_parity_table.py  parity_full.py  release_status.sh  run_live_validation.py  run_manifests.py
src/: admin_ops.rs  client.rs  deploy.rs  evals2.rs  fetch_verify.rs  jobs_polling.rs  license.rs  local.rs  main.rs  output.rs  preflight.rs  release_channel.rs  revisions.rs  segmentation.rs  test_support.rs  version.rs
tests/: revisions_cli.rs  revisions_live.rs  surface_contract.rs
tests/ec2/: README.md  lane-fedora-self-managed.md  lane-fedora-self-managed.sh  lane9.sh
tests/local/: Dockerfile  README.md  entrypoint.sh  playground.sh  run.sh
