[package]
name = "enscrive"
version = "0.1.0"
edition = "2024"
description = "Enscrive CLI for managed and self-managed memory/search workflows"
license = "MIT"
repository = "https://github.com/enscrive/enscrive-cli"
homepage = "https://enscrive.io"
documentation = "https://enscrive.io/docs"
readme = "README.md"
keywords = ["cli", "search", "embeddings", "rag", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "enscrive"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
futures-util = "0.3"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
